taina/style.css
/* ... */
.wp-block-post-template.is-style-taina-cards > li > .wp-block-group:not(.has-border-color):last-child {
  border-bottom: 4px solid var(--wp--preset--color--primary);
}
.wp-block-post-template.is-style-taina-cards > li .wp-block-post-title a {
  position: static;
  cursor: pointer;
  text-decoration: none !important;
  color: inherit !important;
}
.wp-block-post-template.is-style-taina-cards > li .wp-block-post-title a::before {
  cursor: pointer;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Trickery to make post terms look like separated tags */
.wp-block-post-terms .wp-block-post-terms__separator {
  color: transparent;
  padding: 2px;
  background-color: var(--wp--preset--color--background);
}
.wp-block-post-terms a {
  padding: 6px 12px;
  background-color: var(--wp--preset--color--background-alt);
}

/* Pullquote block has some particularities
 * that are not possible to set in themes.json
 * so far... */
.wp-block-pullquote {
  border-left-style: solid;
  border-right-style: solid;
}
.wp-block-pullquote:not(.alignfull):not(.alignwide) {
  max-width: calc(750px - 2 * var(--wp--custom--spacing--one-column));
}
.wp-block-pullquote.alignwide {
  max-width: calc(1100px - 2 * var(--wp--custom--spacing--one-column));
}
.wp-block-pullquote.alignfull {
  max-width: calc(100% - 2 * var(--wp--custom--spacing--one-column));
}
.wp-block-pullquote blockquote {
  margin-left: -42px;
  margin-right: -42px;
  padding-left: var(--wp--custom--spacing--one-column);
  padding-right: var(--wp--custom--spacing--one-column);
}
.wp-block-pullquote blockquote p {
  margin-top: 0px;
  font-family: var(--wp--preset--font-family--headings);
}
.wp-block-pullquote blockquote cite {
  text-transform: none;
}
.wp-block-pullquote:not(.has-background) blockquote {
  background-color: var(--wp--preset--color--background);
}
.wp-block-pullquote.has-background blockquote {
  background-color: inherit;
}
.wp-block-pullquote:not(.has-text-color) blockquote p {
  color: var(--wp--preset--color--primary);
}
@media screen and (max-width: 1024px) {
  .wp-block-pullquote blockquote {
    padding-left: calc(3 * var(--wp--custom--spacing--one-column));
    padding-right: calc(3 * var(--wp--custom--spacing--one-column));
  }
}

/* Search should be flat flat flat */
.wp-block-search {
  max-width: 100%;
}
.wp-block-search .wp-block-search__inside-wrapper .wp-block-search__input {
  color: inherit;
  border-width: 0px;
  padding: 0em 1em !important;
  font-weight: inherit;
  text-transform: inherit;
  font-size: 0.75em;
  line-height: inherit;
}
.wp-block-search .wp-block-search__inside-wrapper .wp-block-search__button {
  border-width: 0px;
  margin-left: 0px;
  line-height: inherit;
  padding: 0.375em 0.75em;
}
.wp-block-search .wp-block-search__inside-wrapper .wp-block-search__button svg {
  height: 100%;
}
.wp-block-search.is-style-taina-collapsable-search {
  position: relative;
}
.wp-block-search.is-style-taina-collapsable-search .wp-block-search__inside-wrapper {
  background-color: inherit;
  position: absolute;
  height: auto;
  min-height: 100%;
  min-width: 368px;
  right: 0;
  overflow: hidden;
  transition: min-width 0.2s ease, max-width 0.2s ease;
}
.wp-block-search.is-style-taina-collapsable-search .wp-block-search__inside-wrapper .wp-block-search__input {
  background-color: inherit;
}
.wp-block-search.is-style-taina-collapsable-search .wp-block-search__inside-wrapper input:focus-visible {
  outline-offset: -3px;
}
.wp-block-search.is-style-taina-collapsable-search .wp-block-search__inside-wrapper .wp-block-search__button {
  order: -1;
}
.wp-block-search.is-style-taina-collapsable-search .wp-block-search__inside-wrapper:not(:hover):not(:focus):not(:focus-within) {
  max-width: 3.05em;
  min-width: 0px !important;
}

/* Quote block with 'quoted' style */
.wp-block-quote.is-style-taina-quoted {
  padding-left: var(--wp--custom--spacing--one-column);
  padding-right: var(--wp--custom--spacing--one-column);
  border: none;
  position: relative;
  text-align: center;
  margin-block-start: calc(var(--wp--style--block-gap) * 2) !important;
}
.wp-block-quote.is-style-taina-quoted cite {
  font-family: var(--wp--preset--font-family--headings);
  font-style: italic;
  font-weight: 600;
  color: var(--wp--preset--color--primary);
}
.wp-block-quote.is-style-taina-quoted::after, .wp-block-quote.is-style-taina-quoted::before {
  font-size: 220px;
  line-height: 100px;
  font-family: var(--wp--preset--font-family--headings);
  font-style: italic;
  font-weight: 900;
  position: absolute;
  color: var(--wp--preset--color--background);
}
.wp-block-quote.is-style-taina-quoted::before {
  content: "“";
  left: -100px;
  top: 0px;
  bottom: 50%;
  text-align: start;
  text-shadow: -1px -1px 0px var(--wp--preset--color--primary), 1px -1px 0px var(--wp--preset--color--primary), -1px 1px 0px var(--wp--preset--color--primary), 1px 1px 0px var(--wp--preset--color--primary);
}
.wp-block-quote.is-style-taina-quoted::after {
  content: "”";
  right: -100px;
  bottom: 0px;
  top: 50%;
  text-align: end;
  text-shadow: -1px -1px 0px var(--wp--preset--color--background-alt), 1px -1px 0px var(--wp--preset--color--background-alt), -1px 1px 0px var(--wp--preset--color--background-alt), 1px 1px 0px var(--wp--preset--color--background-alt);
}
@media screen and (max-width: 1024px) {
  .wp-block-quote.is-style-taina-quoted::after, .wp-block-quote.is-style-taina-quoted::before {
    font-size: 160px;
    line-height: 60px;
  }
  .wp-block-quote.is-style-taina-quoted::before {
    left: -50px;
    top: calc(var(--wp--style--block-gap) * -1);
    bottom: 0%;
  }
  .wp-block-quote.is-style-taina-quoted::after {
    right: -50px;
    top: 100%;
    bottom: calc(var(--wp--style--block-gap) * -1);
  }
}
/* ... */

